# spiderswitch

./: .gitignore  CHANGELOG.md  DEPLOYMENT_VERIFICATION.md  LICENSE-APACHE  LICENSE-MIT  MODIFICATION_SUMMARY.md  PRODUCT_GUIDE.md  PUBLISHING_GUIDE.md  README.md  README_CN.md  USAGE_EXAMPLES.md  USER_GUIDE.md  USER_GUIDE_CN.md  pyproject.toml
scripts/: install.sh  install_offline.sh  package_plugin_bundle.sh  verify.sh
src/ai_mcp_model_switcher/: __init__.py  errors.py  response.py  server.py  state.py  validation.py
src/ai_mcp_model_switcher/runtime/: base.py  python_runtime.py
src/ai_mcp_model_switcher/tools/: __init__.py  list.py  status.py  switch.py
src/spiderswitch/: __init__.py  errors.py  response.py  server.py  state.py  validation.py
src/spiderswitch/runtime/: __init__.py  base.py  python_runtime.py
src/spiderswitch/tools/: __init__.py  list.py  reset.py  status.py  switch.py
tests/: __init__.py  test_runtime.py  test_runtime_concurrency.py  test_server_regression.py  test_state.py  test_tools.py  test_validation.py
